Fix some layout issues with new options pane and big riders list.

--- a/trackers/static/event.css
+++ b/trackers/static/event.css
@@ -66,10 +66,17 @@ html, body {
     height: 25%;
 }
 
-#riders_contain {
+#riders_options {
+    display: flex;
+    -ms-flex-direction: column; flex-direction: column;
     -ms-flex: 1 1 20%; flex: 1 1 20%;
-    position: relative;
     background: white;
+
+}
+
+#riders_contain {
+    position: relative;
+    -ms-flex: 1 1 20%; flex: 1 1 20%;
 }
 
 #options {
@@ -91,7 +98,7 @@ html, body {
     visible: false;
 }
 
-#riders_contain.big #riders {
+.big #riders_contain #riders {
     position: absolute;
     left: 0;
     right: 0;
@@ -100,7 +107,7 @@ html, body {
     max-height: 100%;
 }
 
-#riders_contain.small {
+#riders_options.small  {
     position: absolute;
     top: 0;
     box-shadow: 2px 2px 4px -1px rgba(0, 0, 0, 0.5);
@@ -109,6 +116,7 @@ html, body {
     z-index: 3;
     margin: 10px;
 }
+
 
 #riders table{
     border-collapse: collapse;
@@ -162,13 +170,13 @@ html, body {
 .desktop_show_riders #options {
     display: none;
 }
-.desktop_show_riders #riders {
+.desktop_show_riders #riders_contain {
     display: block;
 }
 .desktop_show_options #options {
     display: block;
 }
-.desktop_show_options #riders {
+.desktop_show_options #riders_contain {
     display: none;
 }
 
@@ -186,28 +194,41 @@ html, body {
         display: flex;
     }
 
+
+    #riders {
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        max-height: 100%;
+    }
     .show_map #map_contain, .show_map #elevation{
         display: block;
     }
-    .show_map #riders_contain{
+    .show_map #riders_options{
         display: none;
     }
     .show_riders #map_contain, .show_riders #elevation, .show_riders #options{
         display: none;
     }
-    .show_riders #riders_contain, .show_riders #riders{
+    .show_riders #riders_options, .show_riders #riders_contain{
         display: block;
     }
-    .show_options #map_contain, .show_options #elevation, .show_options #riders{
+    .show_options #map_contain, .show_options #elevation, .show_options #riders_contain{
         display: none;
     }
-    .show_options #riders_contain, .show_options #options{
+    .show_options #riders_options, .show_options #options{
         display: block;
     }
-    #riders_contain.small, #riders_contain.big{
+    #riders_options, #riders_options.small {
         position: relative;
         box-shadow: none;
         max-width: 100%;
+    }
+    #riders_contain {
+        height: 100%;
+        position: relative;
     }
     #riders{
         position: absolute;
